fixed alignment

--- a/style.css
+++ b/style.css
@@ -484,6 +484,7 @@ footer {
         background-color: #007bff;
         color: #fff;
         border-radius: 5px;
+        justify-content: center;
     }
     .slideshow-container {
         max-width: 95vw;
